# data-mining-t1-2025

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: default.yaml  fp_mining.yaml  sp_mining.yaml
examples/: multi_dataset_example.py  sp_mining_example.py
notebook/: association-rules-mining.ipynb  frequent-pattern-mining-comparison.ipynb  sequential-pattern-mining-comparison.ipynb
src/: run_pipeline.py
src/common/: __init__.py  config.py
src/fp_mining/: __init__.py  config_runner.py  main.py
src/fp_mining/algorithms/: __init__.py  apriori.py  fpgrowth.py
src/fp_mining/core/: __init__.py  container.py  interfaces.py  pipeline.py
src/fp_mining/evaluators/: __init__.py  coverage.py  performance.py  quality.py
src/fp_mining/loaders/: __init__.py  csv_loader.py  transformers.py
src/sp_mining/: __init__.py  config_runner.py  main.py
src/sp_mining/algorithms/: __init__.py  gsp.py  prefixspan.py
src/sp_mining/core/: __init__.py  container.py  interfaces.py  pipeline.py
src/sp_mining/evaluators/: __init__.py  coverage.py  performance.py  quality.py
src/sp_mining/loaders/: __init__.py  csv_loader.py  transformers.py
